# Vantage

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  agents-workflow.md  docker-compose.yml  explanation.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/db/: connection.py  repository.py
app/graph/: state.py  workflow.py
app/graph/nodes/: aggregator.py  bill_agent.py  discharge_agent.py  id_agent.py  segregator.py
app/llm/: provider.py
app/models/: schema.py
app/services/: pdf.py
docs/: DocumentProcessingPipeline.md
migrations/: 001_init.sql
