[project]
name = "vantage"
version = "0.1.0"
description = "AI-powered document segregation and multi-agent extraction service using LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Development Team" }]

dependencies = [
  # FastAPI
  "fastapi>=0.104.1",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  # Database
  "sqlalchemy>=2.0.23",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.12.1",
  # LangChain & LangGraph
  "langchain>=0.1.0",
  "langgraph>=0.0.40",
  "langchain-openai>=0.0.13",
  # PDF Processing
  "PyPDF2>=3.0.1",
  "pdfplumber>=0.10.3",
  "python-pptx>=0.6.21",
  # Environment and Config
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.6",
  # Utilities
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "httpx>=0.25.2",
  # Logging and Monitoring
  "structlog>=23.2.0",
  "loguru>=0.7.2",
  # Data Processing
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "google-genai>=1.63.0",
  "asyncpg>=0.31.0",
  "psycopg[binary]>=3.3.2",
  "langchain-anthropic>=1.3.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3",
  "pytest-asyncio>=0.21.1",
  "pytest-cov>=4.1.0",
  "black>=23.12.0",
  "ruff>=0.1.8",
  "mypy>=1.7.0",
  "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 150
target-version = ['py311']

[tool.ruff]
line-length = 150
target-version = "py311"
select = ["E", "F", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
